0x08-recursion/5-sqrt_recursion.c:
qrt_recursion.c:16:2: error: ISO C90 forbids mixed declarations and code [-Werror=declaration-after-statement]
   16 |  int a = sqrt(n);
      |  ^~~
